[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "large-volume-data"
description = 'Data release for Greig et. al. 2022'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Simon Mutch", email = "smutch@unimelb.edu.au" },
  { name = "Brad Greig", email = "bgreig@unimelb.edu.au" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/BradGreig/large-volume-data#readme"
Issues = "https://github.com/BradGreig/large-volume-data/issues"
Source = "https://github.com/BradGreig/large-volume-data"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "large_volume_data/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.3.9"
]
scripts.serve = "mkdocs serve"
